[package]
name = "sassafras"
version = "0.1.0"
authors = ["Philip Daniels <Philip.Daniels1971@gmail.com>"]

[dependencies]
libc = "0.2"

[lib]
# This makes both a Rust library and a static C Linux library.
# The appropriate GCC command is something like
#     gcc -o linktest linktest.c -L../target/debug -lsassafras -lpthread -ldl
# See also https://doc.rust-lang.org/reference/linkage.html
crate-type = ["staticlib", "lib"]

